# squeekboard

./: .gitignore  .gitlab-ci.yml  Cargo.deps  Cargo.deps.newer  Cargo.toml  Cargo.toml.in  NEWS.md  README.md  meson.build  meson_options.txt
data/: meson.build  sm.puri.Squeekboard.gschema.xml  style-Adwaita:dark.css  style.css
data/keyboards/: am+phonetic.yaml  am+phonetic_wide.yaml  am.yaml  am_wide.yaml  ara.yaml  ara_wide.yaml  be.yaml  be_wide.yaml  bg+phonetic.yaml  bg+phonetic_wide.yaml  bg.yaml  bg_wide.yaml  br.yaml  br_wide.yaml  ca.yaml  ca_wide.yaml  ch+de.yaml  ch+de_wide.yaml  ch+fr.yaml  ch+fr_wide.yaml  ch.yaml  ch_wide.yaml  cz+qwerty.yaml  cz+qwerty_wide.yaml  cz.yaml  cz_wide.yaml  de.yaml  de_wide.yaml  dk.yaml  dk_wide.yaml  epo.yaml  epo_wide.yaml  es+cat.yaml  es+cat_wide.yaml  es.yaml  es_wide.yaml  fi.yaml  fi_wide.yaml  fr+bepo.yaml  fr+bepo_wide.yaml  (+41 more)
data/keyboards/email/: us.yaml  us_wide.yaml
data/keyboards/emoji/: us.yaml  us_wide.yaml
data/keyboards/number/: us.yaml  us_wide.yaml
data/keyboards/terminal/: de.yaml  de_wide.yaml  es.yaml  es_wide.yaml  fr+bepo.yaml  fr+bepo_wide.yaml  fr.yaml  fr_wide.yaml  us+dvorak.yaml  us+dvorak_wide.yaml  us.yaml  us_wide.yaml
data/keyboards/url/: us.yaml  us_wide.yaml
debian/: changelog  control  control.debian-testing  copyright  gbp.conf  rules  squeekboard.install
doc/: hacking.md  index.md  layouts.md  tutorial.md
eek/: eek-renderer.c
eekboard/: eekboard-context-service.c
protocols/: meson.build
src/: action.rs  drawing.rs  keyboard.rs  layout.h  layout.rs  main.rs  meson.build  (+11 more)
(+22 files in other folders)
